# course_v4

./: .gitignore  pyproject.toml
lesson_1/: 01_intro.ipynb  create_text_images.py  molecule_classifier.ipynb
